fixed overflows

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body{
     background: radial-gradient(circle at center, #1a1a1a, #000);
-    height: 90vh;
-    margin: 35px;
+    height: 100vh;
+    margin: 25px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -91,6 +91,7 @@ body{
     color: #9fcdff;
 }
 
+
 .about{
       font-size: 0.85rem;
       border-right: 2px solid orange;
@@ -98,7 +99,8 @@ body{
       overflow: hidden;
       width: 0;
       animation: typing 4s steps(40, end) forwards, blink 0.8s step-end infinite;
-
+     
+    
     }
 
     @keyframes typing {
